made one change to the logo so that it appears correctly on mobile devices

--- a/webroot/css/sogive-day.css
+++ b/webroot/css/sogive-day.css
@@ -8,8 +8,48 @@
   z-index: -1;
 }
 
+.about-bg {
+  background: url('../img/hands-butterfly-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
 .aims-bg {
   background: url('../img/leaves-on-line-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.team-bg {
+  background: url('../img/leaf-in-sun-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.getinvolved-bg {
+  background: url('../img/plane-sunset-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.contact-bg {
+  background: url('../img/walking-at-dusk-2k.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
   height: 40em; /*same height as jumbotron */
@@ -35,7 +75,7 @@
 }
 
 .logo-sm {
-  width: 19em;
+  width: 100%;
   height: auto;
 }
 
@@ -73,6 +113,10 @@
   color: #fff;
   background-color: rgb(100, 138, 175);
   border-color: #D1D3D4;
+}
+
+.send-form-button {
+  margin-top: 1em;
 }
 
 .divcontact-dropin {
@@ -199,4 +243,8 @@ h2 {
 
 .nav>li>a {
   font-size: 14px;
+}
+
+.bumped-down {
+  margin-top: 2em;
 }
