--- a/webroot/css/sogive-evening.css
+++ b/webroot/css/sogive-evening.css
@@ -75,7 +75,7 @@
 }
 
 .logo-sm {
-  width: 19em;
+  width: 100%;
   height: auto;
 }
 
